Applied darker grey colour to fix the insuffient colour contrast a11y serious issue (#17545)

--- a/js/apps/admin-ui/src/user/user-section.css
+++ b/js/apps/admin-ui/src/user/user-section.css
@@ -91,7 +91,7 @@ div.pf-c-chip-group.kc-consents-chip-group
 
 .kc-search-users-text {
   margin-left: var(--pf-global--spacer--md);
-  color: var(--pf-global--Color--400);
+  color: var(--pf-global--Color--200);
 }
 
 article.pf-c-card.pf-m-flat.kc-linked-idps,
